# codecraft

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
agents/: react_agent.py
cli/: app.py
core/: __init__.py  agent.py  executor.py  llm.py  message.py  middleware.py  planner.py  reflector.py  runtime.py
docker/: .dockerignore  sandbox.Dockerfile
docs/: ARCHITECTURE.md  DESIGN_NOTES.md  EVAL_BASELINE.md  RELEASING.md  RELEASING.zh-CN.md  ROADMAP.md
docs/releases/: v0.1.0a3.md  v0.1.0a3.zh-CN.md
llm/providers/: qwen.py
memory/: __init__.py  base.py  in_memory.py
memory/storage/: __init__.py  neo4j_graph_store.py  qdrant_semantic_vector_store.py
memory/types/: semantic.py
observability/: context.py  decorators.py  trace.py
schema/: __init__.py  action.py  decision.py  event.py  memory.py  plan.py  reflection.py  result.py  state.py  step.py
src/agent_runtime/: __init__.py
src/agent_runtime/cli/: app.py  rich_renderer.py  slash.py
src/agent_runtime/core/: __init__.py  agent.py  event_bus.py  executor.py  runtime.py  trace.py
src/agent_runtime/llm/: __init__.py  base.py
src/agent_runtime/memory/: base.py  in_memory.py
src/agent_runtime/observability/: context.py  decorators.py  trace.py
src/agent_runtime/operation/: __init__.py  base.py  registry.py  resolver.py
src/agent_runtime/policy/: __init__.py  engine.py
src/agent_runtime/schema/: __init__.py  capability.py  decision.py  event.py  intent.py  memory.py  policy.py  result.py  state.py  step.py  strategy.py  tool.py
src/agent_runtime/tool/: __init__.py  base.py  factory.py  provider.py  registry.py  resolver.py
src/codecraft/: __init__.py
src/codecraft/approval/: __init__.py  manager.py  policy.py  thread_reviewer.py
src/codecraft/cli/: app.py  bootstrap.py  options.py  rich_renderer.py  runtime_runner.py  slash.py
src/codecraft/config/: __init__.py  loader.py  settings.py
src/codecraft/core/: __init__.py  agent.py  approval.py  (+18 more)
tests/: test_approval.py  test_approval_policy.py  test_base_tool.py  test_cli_app.py  test_config_loader.py  test_docker_sandbox_integration.py  test_eval.py  test_event_bus.py  test_filesystem_tools.py  test_mcp_client.py  test_mcp_server.py  test_native_sandbox_integration.py  test_policy_engine.py  test_public_api.py  test_qwen_provider.py  test_retrieval_engine.py  test_retrieval_eval.py  test_retrieval_index.py  test_rich_renderer.py  test_runtime.py  test_runtime_foundation.py  test_runtime_lifecycle.py  test_runtime_limits.py  test_sandbox_backend.py  test_shell_exec_tool.py  test_slash.py  test_tool_registry.py  test_tool_renderer.py  test_trace.py  test_tui.py
tests/fixtures/: mcp_test_server.py
tool/: base.py  decorator.py  registry.py
tool/builtin/: __init__.py  bash.py  calculator.py  final_answer.py  read_file.py
tools/: __init__.py  registry.py
tools/builtin/: calculator.py
(+147 files in other folders)
