[project]
name = "codecraft"
version = "0.1.0"
description = "Open-source coding agent with governed tool execution and traceable runtime events."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "typer>=0.25.1",
]

[project.scripts]
codecraft = "codecraft.cli.app:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
