[project]
name = "codecraft"
version = "0.1.0a2"
description = "Open-source coding agent with governed tool execution and traceable runtime events."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "weipengtao", email = "wei_pengtao@qq.com" },
]
keywords = ["agent", "coding-agent", "cli", "runtime", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=2.36.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.13.4",
    "rich>=14.0.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-javascript>=0.23,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/Dabuliule/codecraft"
Repository = "https://github.com/Dabuliule/codecraft"
Issues = "https://github.com/Dabuliule/codecraft/issues"

[project.scripts]
codecraft = "codecraft.cli.app:app"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codecraft = ["prompt/resources/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
